--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
 
 	<div class="menu">
 		<p id = "button"><a href = "index.html"> overview </a></p>
-		<p id = "button"><a href = "Statistics.html"> symptoms </a></p>
-		<p id = "button"><a href = "Take_action.html"> help</a></p>
+		<p id = "button"><a href = "symptoms.html"> symptoms </a></p>
+		<p id = "button"><a href = "help.html"> help</a></p>
 		
 	</div>
 
+	<div class="overview">
+		<div class="image">
+			<img src="sad.jpg">
+		</div>
+		<div class="text">
+			<h2>What is Broken Heart Syndrome?</h2>
+			<p>In technical terms it is when the heart suddenly becomes stunned or weakened. It is often brought about by severe emotional/physical distress, but sometimes it can be triggered by serious physical illness/surgery. Usually it is temporary and can last up to a couple of months, but some do expereince a lingering fatigue.</p>
+
+			<p>Broken Heart Syndrome is also called: Stress cardiomyopathy, Takosubo cardiomyopathy, Recurrent takosubo cardiomyopathy, and Apical ballooning syndrom</p>
+		</div>
+	</div>
 
 </body>
 </html>
